fix drop down arrow mispositioning on smaller screens

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,8 +17,8 @@ html {
 :target:before {
     content: "";
     display: block;
-    height: 100px;
-    margin: -100px 0 0;
+    height: 10vh;
+    margin: -10vh 0 0;
 }
 
 // Body
